# gstwebrtc-demos

./: Doxyfile  README.md  docker-compose.yml  run.sh
android/app/src/main/jni/: webrtc.c
multiparty-sendrecv/gst/: mp-webrtc-sendrecv.c
sendonly/: webrtc-unidirectional-h264.c
sendrecv/gst/: Dockerfile  Makefile  webrtc-sendrecv.c  webrtc-sendrecv.py
sendrecv/gst-java/: Dockerfile
sendrecv/gst-java/src/main/java/: WebrtcSendRecv.java
sendrecv/gst-rust/: Cargo.toml  Dockerfile
sendrecv/gst-rust/src/: main.rs
signalling/: Dockerfile  README.md  streaming-signalling-server.py
streamer/: README.md
streamer/gst/: Makefile
streamer/gst/include/: camera-pipeline.h  webrtc-mountpoint.h  webrtc-server.h
streamer/gst/src/: camera-pipeline.c  main.c  webrtc-mountpoint.c  webrtc-server.c
streamer/js/: webrtc-demo.html  webrtc-demo.js
