[package]
name = "gst-rust"
version = "0.1.0"
authors = ["maxmcd <max.t.mcdonnell@gmail.com>", "Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"

[dependencies]
clap = "2.31.2"
failure = "0.1.1"
glib = "0.8"
gst = { package = "gstreamer", version = "0.14" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.14" }
gst-sdp = { package = "gstreamer-sdp", version = "0.14" }
lazy_static = "1.0"
rand = "0.7"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
websocket-hyper = { git = "https://github.com/sdroege/rust-websocket.git", rev = "tokio-0.2" }
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
tokio = { version = "0.2.0-alpha.6" }
